created product card in main,added image/classes

--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -63,6 +63,41 @@
         </section>
         <main>
             <!-- YOUR MAIN GOES HERE -->
+            <div class="main-container">
+                <section class="d-flex arrivals-shop">
+                    <h2 class="arrivals">New Arrivals</h2>
+                    <div  class="shop-div">
+                        <a href="" class="shop">SHOP NOW</a>
+                    </div>
+                </section>
+
+                <section class="productCard-container">
+                    <section class="productCard">
+                        <div>
+                            <a href="">
+                                <div class="product-img_container">
+                                    <img src="assets/images/istockphoto-1127163067-612x612.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+            </div>
         </main>
         <footer>
             <section class="footer-container d-flex">
