added images to assets/images folder

--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -74,7 +74,7 @@
                 <section class="productCard-container">
                     <section class="productCard">
                         <div>
-                            <a href="">
+                            <a href="" class="anchor-card">
                                 <div class="product-img_container">
                                     <img src="assets/images/istockphoto-1127163067-612x612.jpg" alt="">
                                     <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
