--- a/e-commerce/templates/assets/css/styles.css
+++ b/e-commerce/templates/assets/css/styles.css
@@ -181,7 +181,13 @@ a{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /* transition: transform 0.3s; */
 }
+    /* TO MAKE THE IMAGES BIGGER ON HOVER */
+/* .product-img_container:hover img{
+    transform: scale(2);
+    cursor: pointer;
+} */
 
 .card-cart{
     color: black;
@@ -205,8 +211,6 @@ a{
 .price{
     font-weight: 600;
 }
-
-
 
 
 
