--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://kit.fontawesome.com/f117ac489a.js" crossorigin="anonymous"></script>
+    
 </head>
 <body>
     <div>
@@ -77,7 +78,7 @@
                         <div>
                             <a href="" class="anchor-card">
                                 <div class="product-img_container">
-                                    <img src="assets/images/istockphoto-1127163067-612x612.jpg" alt="">
+                                    <img src="assets/images/pic3.jpg" alt="">
                                     <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                 </div>
                                 
@@ -127,6 +128,85 @@
                         <div>
                             <a href="" class="anchor-card">
                                 <div class="product-img_container">
+                                    <img src="assets/images/pic1.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic4.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+                
+
+                <!-- PRODUCT CARD CONTAINER -->
+                <section class="productCard-container d-flex">
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic5.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
                                     <img src="assets/images/pic6.jpg" alt="">
                                     <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                 </div>
@@ -152,7 +232,32 @@
                         <div>
                             <a href="" class="anchor-card">
                                 <div class="product-img_container">
-                                    <img src="assets/images/pic5.jpg" alt="">
+                                    <img src="assets/images/pic7.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic8.jpg" alt="">
                                     <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
                                 </div>
                                 
@@ -173,8 +278,56 @@
                         </div>
                     </section>
                 </section>
+
+                <section class="d-flex about-homepage">
+                    <section class="about-img">
+                        <img src="assets/images/skin-cleanser-template-face-lotion-img.jpg" alt="">
+                    </section>
+                    <section class="about-writeup-container d-flex">
+                        <div class= "about-homepage-div">
+                            <h2 class="arrivals">Beauty Flawless Skin</h2>
+                            <p class="about-writeup">Enim lectus mauris faucibus turpis convallis ipsum odio lorem dignissim id odio sed enim nullam venenatis erat in cursus tortor tristique aliquam nulla quis.</p>
+
+                            <p class="about-writeup">Aliquam scelerisque scelerisque ac laoreet laoreet faucibus vestibulum fringilla ut aliquet dictumst dignissim id eget cras nulla venenatis dictum tristique faucibus lectus egestas aenean placerat dolor dolor phasellus eros vestibulum velit turpis ornare facilisis ante ornare.</p>
+
+                            <div  class="shop-div">
+                                <a href="" class="shop">READ MORE</a>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+
+                <!-- <hr> -->
+                <!-- ORGANIC CARE -->
+
+                <section class="d-flex organic-care">
+
+                    
+                    <section>
+                        <i class="fa-solid fa-hand-sparkles"></i>
+                        <h3 class="properties">All Skin Types</h3>
+                        <p>Morbi nullam odio lectus vitae lorem in non</p>
+                        <p>tortor aliquet eget faucibus dui dolor.</p>
+                    </section>
+                    <section>
+                        <i class="fa-solid fa-leaf"></i>
+                        <h3 class="properties">Pure Organic</h3>
+                        <p>Morbi nullam odio lectus vitae lorem in non</p>
+                        <p>tortor aliquet eget faucibus dui dolor.</p>
+                    </section>
+                    <section>
+                        <i class="fa-solid fa-hand-holding-heart"></i>
+                        <h3 class="properties">Natural Care</h3>
+                        <p>Morbi nullam odio lectus vitae lorem in non</p>
+                        <p>tortor aliquet eget faucibus dui dolor.</p>
+                    </section>
+                    
+                </section>
+
             </div>
         </main>
+
+        <!-- FOOTER -->
         <footer>
             <section class="footer-container d-flex">
                 <div class="footer-services d-flex">
