--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -325,6 +325,187 @@
                 </section>
 
             </div>
+
+            <section class="background-img_2">
+                <div class="d-flex hero_2">
+                    <div>
+                        <h2>Flawless Skinncare Regimen</h2>
+                        <div  class="watch-div">
+                            <a href="" class="watch">WATCH THE VIDEOS</a>
+                            <i class="fa-brands fa-youtube"></i>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <div class="main-container">
+                <div class="beauty-flawlwess">
+                    <h2 class="arrivals">Most Loved by the Customers</h2>
+                    <p>Mauris lacus nunc pellentesque eget bibendum vitae scelerisque</p>
+                </div>
+
+                <section class="productCard-container d-flex">
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic3.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic2.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic1.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic4.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+                </section>
+
+                <section class="review-container">
+                    <h2 class="arrivals t-center review">What Our Customers Say</h2>
+
+                    <div class="d-flex review-card-container">
+                        <section class="review-card">
+                            <section class="rating_pink">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </section>
+                            <div>
+                                <p class="rate">Sed odio donec curabitur auctor amet tincidunt non odio enim felis tincidunt amet morbi egestas hendrerit.</p>
+                            </div>
+                            <div class="review-img">
+                                <img src="assets/images/review-1.jpg" alt="">
+                            </div>
+                            <p class="reviewer-name">JENNIFER LEWIS</p>
+                        </section>
+
+                        <section class="review-card">
+                            <section class="rating_pink">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </section>
+                            <div>
+                                <p class="rate">Sed odio donec curabitur auctor amet tincidunt non odio enim felis tincidunt amet morbi egestas hendrerit.</p>
+                            </div>
+                            <div class="review-img">
+                                <img src="assets/images/review-2.jpg" alt="">
+                            </div>
+                            <p class="reviewer-name">JENNIFER LEWIS</p>
+                        </section>
+
+                        <section class="review-card">
+                            <section class="rating_pink">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </section>
+                            <div>
+                                <p class="rate">Sed odio donec curabitur auctor amet tincidunt non odio enim felis tincidunt amet morbi egestas hendrerit.</p>
+                            </div>
+                            <div class="review-img">
+                                <img src="assets/images/review-3.jpg" alt="">
+                            </div>
+                            <p class="reviewer-name">JUAN CARLOS</p>
+                        </section>
+                    </div>
+
+                    <p class="follow">Follow us <a href="">@flawlesscleanser</a></p>
+                </section>
+               
+            </div>
         </main>
 
         <!-- FOOTER -->
