--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -328,12 +328,9 @@
 
             <section class="background-img_2">
                 <div class="d-flex hero_2">
-                    <div>
-                        <h2>Flawless Skinncare Regimen</h2>
-                        <div  class="watch-div">
-                            <a href="" class="watch">WATCH THE VIDEOS</a>
-                            <i class="fa-brands fa-youtube"></i>
-                        </div>
+                    <div class="watch-youtube">
+                        <h2 class="flawless">Flawless Skincare Regimen</h2>
+                        <a href="" class="watch">WATCH THE VIDEOS <i class="fa-brands fa-youtube"></i></a>
                     </div>
                 </div>
             </section>
@@ -481,7 +478,7 @@
                             <div class="review-img">
                                 <img src="assets/images/review-2.jpg" alt="">
                             </div>
-                            <p class="reviewer-name">JENNIFER LEWIS</p>
+                            <p class="reviewer-name">ALICIA HEART</p>
                         </section>
 
                         <section class="review-card">
@@ -503,6 +500,39 @@
                     </div>
 
                     <p class="follow">Follow us <a href="">@flawlesscleanser</a></p>
+
+                    <section class="more-img d-flex">
+                        <section class="more-images">
+                            <a href="" >
+                                <img src="assets/images/more-img-1.jpg" alt="">
+                            </a>
+                        </section>
+                        <section class="more-images">
+                            <a href="">
+                                <img src="assets/images/more-img-2.jpg" alt="">
+                            </a>
+                        </section>
+                        <section class="more-images">
+                            <a href="">
+                                <img src="assets/images/more-img-3.jpg" alt="">
+                            </a>
+                        </section>
+                        <section class="more-images">
+                            <a href="">
+                                <img src="assets/images/more-img-4.jpg" alt="">
+                            </a>
+                        </section>
+                        <section class="more-images">
+                            <a href="">
+                                <img src="assets/images/more-img-5.jpg" alt="">
+                            </a>
+                        </section>
+                        <section class="more-images">
+                            <a href="">
+                                <img src="assets/images/more-img-6.jpg" alt="">
+                            </a>
+                        </section>
+                    </section>
                 </section>
                
             </div>
