updated links in home page, completed contact page

--- a/e-commerce/templates/contact.html
+++ b/e-commerce/templates/contact.html
@@ -56,10 +56,10 @@
           <section class="nav-container d-flex">
             <section class="header-options header-section1">
               <ul class="d-flex options">
-                <li><a href="">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="">SHOP</a></li>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">CONTACT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
               </ul>
             </section>
 
@@ -100,6 +100,175 @@
       </section>
       <main>
         <!-- YOUR MAIN GOES HERE -->
+        <section class="services d-flex">
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
+
+            <div>
+              <p>Track Order</p>
+            </div>
+          </section>
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="fas fa-boxes"></i>
+            </div>
+
+            <div>
+              <p>Packaging & Delivery</p>
+            </div>
+          </section>
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="far fa-question-circle"></i>
+            </div>
+
+            <div>
+              <p>FAQ Services</p>
+            </div>
+          </section>
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="fas fa-sync"></i>
+            </div>
+
+            <div>
+              <p>Returns Policy</p>
+            </div>
+          </section>
+        </section>
+        <section class="divide">
+          <div>
+            <hr />
+          </div>
+        </section>
+        <section class="d-flex">
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
+
+            <div>
+              <p>
+                FIND US
+                <br />
+                123 Demo Lane, Lagos, Nigeria.
+              </p>
+            </div>
+          </section>
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="fas fa-life-ring"></i>
+            </div>
+
+            <div>
+              <p>
+                SUPPORT
+                <br />
+                Call: +1 123 456 7890
+                <br />
+                Email: mail@example.com
+              </p>
+            </div>
+          </section>
+          <section class="icon-box">
+            <div class="material-symbols-outlined">
+              <i class="fas fa-clock"></i>
+            </div>
+
+            <div>
+              <p>
+                WORKING HOURS
+                <br />
+                Mon - Fri: 08:30 - 20:00 <br />Sat & Sun: 09:30 - 21:30
+              </p>
+            </div>
+          </section>
+        </section>
+
+        <section class="form-enquiries d-flex">
+          <div class="enquiries">
+            <div class="ask">
+              <h2>Have Any Questions?</h2>
+              <p>
+                Odio turpis pellentesque non volutpat cursus mauris, <br />
+                convallis velit eu tristique blandit eget.
+              </p>
+            </div>
+            <hr />
+            <div class="enquire">
+              <h3>FREQUENTLY ASKED QUESTIONS</h3>
+              <aside>
+                <details>
+                  <summary>Consequat sed pharetra nec</summary>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                    elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus
+                    leo.
+                  </p>
+                </details>
+                <br />
+                <details>
+                  <summary>Penatibus feugiat sed cursus vestibulum</summary>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                    elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus
+                    leo.
+                  </p>
+                </details>
+                <br />
+                <details>
+                  <summary>Donec penatibus hendrerit</summary>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                    elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus
+                    leo.
+                  </p>
+                </details>
+              </aside>
+            </div>
+          </div>
+          <div class="form-box">
+            <form action="https://httpbin.org/get" method="get">
+              <div>
+                <p>
+                  <label for="name">Name <span>*</span></label>
+                </p>
+                <input type="text" name="name" id="name" required autofocus />
+                <p></p>
+                <p>
+                  <label for="email">Email <span>*</span></label>
+                </p>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  required
+                  autocomplete="on"
+                />
+                <p></p>
+                <p>
+                  <label for="message">Comment or Message <span>*</span></label>
+                </p>
+                <textarea
+                  name="message"
+                  id="message"
+                  cols="30"
+                  rows="10"
+                  required
+                ></textarea>
+              </div>
+              <button
+                type="submit"
+                formaction="https://httpbin.org/post"
+                formmethod="post"
+              >
+                SUBMIT
+              </button>
+            </form>
+          </div>
+        </section>
       </main>
       <footer>
         <section class="footer-container d-flex">
@@ -157,10 +326,10 @@
 
           <section>
             <ul class="d-flex footer-options">
-              <li><a href="">Home</a></li>
-              <li><a href="">Shop</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="index.html">HOME</a></li>
+              <li><a href="">SHOP</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
             </ul>
           </section>
 
