--- a/e-commerce/templates/assets/css/contact.css
+++ b/e-commerce/templates/assets/css/contact.css
@@ -132,6 +132,117 @@ a{
   line-height: 2rem;
 }
 
+/* MAIN */
+
+main {
+  margin-top: 5rem;
+}
+
+.icon-box {
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+
+main p {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+
+form p {
+  padding-bottom: 15px;
+  display: block;
+  margin: 0;
+}
+
+.form-enquiries {
+  margin-top: 5rem;
+}
+
+.enquiries p {
+  font-size: 16px;
+  color: #646467;
+}
+
+.enquiries {
+  width: 40%;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
+.enquiries hr {
+  margin-top: 3rem;
+  margin-bottom: 4rem;
+  width: 90%;
+  color:#646467;
+}
+
+.form-box {
+  width: 60%;
+}
+
+input, textarea {
+  padding: 1rem;
+  width: 90%;
+  margin-bottom: 5px;
+  border: 1px solid #646467;
+}
+
+.divide hr {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  width: 100%;
+  height: 2px;
+  background-color: #646467;
+}
+
+label {
+  font-weight: 700;
+  font-size: 16px;
+  color:#646467;
+}
+
+.form-box span {
+  color: #fb4b7a;
+}
+
+.ask h2 {
+  font-size: 36px;
+  font-weight: 500;
+  margin-bottom: 2rem;
+}
+
+.ask p {
+  padding: 1rem;
+}
+
+.enquire h3 {
+  font-size: 14px;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+
+.enquire summary {
+  font-weight: 600;
+}
+
+.enquire details {
+   margin: 0.4rem;
+}
+
+button {
+  padding: 1rem;
+  width: 130px;
+  border-color: #fa2d64;
+  color: #fb4b7a;
+  border: 1px solid;
+  background-color: #ffffff;
+  margin-top: 15px;
+}
+/* .service i {
+  margin-top: 2rem;
+} */
+
 /* FOOTER */
 
 footer{
