--- a/e-commerce/templates/assets/css/about.css
+++ b/e-commerce/templates/assets/css/about.css
@@ -13,12 +13,12 @@ body{
 }
 
 /* HEADER */
-header{
-  /* padding: 25px 35px; */
+/* header{
+  /* padding: 25px 35px;
   
   
   
-}
+} */
 
 .background-img{
   background: url("/e-commerce/templates/assets/images/about-img.jpg");
@@ -130,6 +130,69 @@ a{
 .hero-text-container p{
   color: #ffffff;
   line-height: 2rem;
+}
+
+/* MAIN */
+
+.founder-box {
+  margin-top: 8rem;
+}
+
+.founder-image {
+  margin-left: 5rem;
+  margin-right: 6rem;
+}
+
+.founder-details .no-weight {
+  font-weight: 100;
+  font-size: 16px;
+  margin-bottom: 2rem;
+}
+
+.founder-details .no-weight {
+  margin-top: 5rem;
+}
+
+.no-space {
+  margin-bottom: 2rem;
+  font-size: 16px;
+  margin-top: 0;
+}
+
+.founder-details p {
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+.socials .no-weight {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+}
+
+.socials i {
+  padding-right: 1rem;
+}
+
+.aboutUs {
+  margin-top: 5rem;
+}
+
+.aboutUs .story-title {
+  margin-left: 8rem;
+  width: 30%;
+}
+
+.aboutUs .story-details {
+  width: 70%;
+  margin-right: 8rem;
+  line-height: 2;
+  font-size: 16px;
+}
+
+.story-details p {
+  line-height: 1.5;
 }
 
 /* FOOTER */
