--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -28,7 +28,7 @@
                     <section class="header-options header-section1">
                         <ul class="d-flex options">
                             <li><a href="">HOME</a></li>
-                            <li><a href="">SHOP</a></li>
+                            <li><a href="/e-commerce/templates/shop.html">SHOP</a></li>
                             <li><a href="">ABOUT</a></li>
                             <li><a href="">CONTACT</a></li>
                         </ul>
@@ -173,11 +173,7 @@
                             </div>
                         </div>
                     </section>
-                </section>
-                
 
-                <!-- PRODUCT CARD CONTAINER -->
-                <section class="productCard-container d-flex">
                     <section class="productCard">
                         <div>
                             <a href="" class="anchor-card">
@@ -278,6 +274,110 @@
                         </div>
                     </section>
                 </section>
+                
+
+                <!-- PRODUCT CARD CONTAINER
+                <section class="productCard-container d-flex">
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic5.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic6.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic7.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section class="productCard">
+                        <div>
+                            <a href="" class="anchor-card">
+                                <div class="product-img_container">
+                                    <img src="assets/images/pic8.jpg" alt="">
+                                    <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
+                                </div>
+                                
+                            </a>
+
+                            <div>
+                                <p class="product-name">Cleanser</p>
+                                <p class="product-type">Hybrid Cleansing Balm</p>
+                                <div class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <p class="price">$32.90</p>
+                            </div>
+                        </div>
+                    </section>
+                </section> -->
 
                 <section class="d-flex about-homepage">
                     <section class="about-img">
