download favicon image and updated it to files

--- a/e-commerce/templates/about.html
+++ b/e-commerce/templates/about.html
@@ -48,6 +48,11 @@
       src="https://kit.fontawesome.com/f117ac489a.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="shortcut icon"
+      href="/e-commerce/templates/assets/images/cropped-favicon-192x192.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div>
