--- a/e-commerce/templates/login.html
+++ b/e-commerce/templates/login.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log In Skin cleanser store</title>
     <link rel="stylesheet" href="assets/css/login.css" />
+    <link
+      rel="shortcut icon"
+      href="/e-commerce/templates/assets/images/cropped-favicon-192x192.jpg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <section class="business-title header-section2">
