--- a/e-commerce/templates/sunscreen.html
+++ b/e-commerce/templates/sunscreen.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script src="https://kit.fontawesome.com/f117ac489a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/shop.css">
+    <link rel="stylesheet" href="/e-commerce/templates/assets/css/sunscreen.css">
     
 </head>
 <body>
@@ -83,21 +84,16 @@
                         <a href="/e-commerce/templates/cleanser.html" class="filter-products">Cleanser <span>(6)</span></a>
                         <a href="/e-commerce/templates/moisturisers.html" class="filter-products">Moisturizers <span>(3)</span></a>
                         <a href="/e-commerce/templates/sunscreen.html" class="filter-products">Sunscreens <span>(2)</span></a>
-
-                        <!-- <p class="filter-products">Body Lotion <span>(3)</span></p>
-                        <p class="filter-products">Bundles <span>(1)</span></p>
-                        <p class="filter-products">Cleanser <span>(6)</span></p>
-                        <p class="filter-products">Moisturizers <span>(3)</span></p>
-                        <p class="filter-products">Sunscreens <span>(2)</span></p> -->
                     </section>
                 </section>
 
                 <section class="shop-products">
                     <p class="home-shop"><a href="/e-commerce/templates/index.html">Home </a>/ Shop</p>
+                    <p class="sun-screen">Sunscreens</p>
 
                     <section class="d-flex sort-pattern">
                         <div>
-                            <p>Showing 1–12 of 14 results</p>
+                            <p>Showing all 2 results</p>
                         </div>
 
                         <div>
@@ -115,30 +111,6 @@
                     <section>
                          <!-- PRODUCT CARD CONTAINER -->
                         <section class="productCard-container d-flex">
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic3.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
 
                             <section class="productCard">
                                 <div>
@@ -165,155 +137,6 @@
                                 </div>
                             </section>
 
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic1.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
-
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic4.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
-
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic5.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
-
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic6.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
-
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic7.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
-
-                            <section class="productCard">
-                                <div>
-                                    <a href="" class="anchor-card">
-                                        <div class="product-img_container">
-                                            <img src="assets/images/pic8.jpg" alt="">
-                                            <a href=""><i class="fa-solid fa-cart-shopping card-cart"></i></a>
-                                        </div>
-                                        
-                                    </a>
-
-                                    <div>
-                                        <p class="product-name">Cleanser</p>
-                                        <p class="product-type">Hybrid Cleansing Balm</p>
-                                        <div class="rating">
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                            <i class="fa-regular fa-star"></i>
-                                        </div>
-                                        <p class="price">$32.90</p>
-                                    </div>
-                                </div>
-                            </section>
 
                             <section class="productCard">
                                 <div>
@@ -340,12 +163,6 @@
                                 </div>
                             </section>
                         </section>
-                    </section>
-
-                    <section class="d-flex next">
-                        <p>1</p>
-                        <p>2</p>
-                        <p><i class="fa-solid fa-arrow-right-long"></i></p>
                     </section>
                 </section>
             </section>
