--- a/e-commerce/templates/index.html
+++ b/e-commerce/templates/index.html
@@ -1,76 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skin cleanser store</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
-    />
-    <script
-      src="https://kit.fontawesome.com/f117ac489a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div>
-      <section class="background-img">
-        <header>
-          <section class="nav-container d-flex">
-            <section class="header-options header-section1">
-              <ul class="d-flex options">
-                <li><a href="">HOME</a></li>
-                <li><a href="">SHOP</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-              </ul>
-            </section>
-
-            <section class="business-title header-section2">
-              <img
-                class="business-title-img"
-                src="assets/images/site-logo.svg"
-                alt=""
-              />
-            </section>
-=======
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -95,8 +29,8 @@
                         <ul class="d-flex options">
                             <li><a href="">HOME</a></li>
                             <li><a href="/e-commerce/templates/shop.html">SHOP</a></li>
-                            <li><a href="">ABOUT</a></li>
-                            <li><a href="">CONTACT</a></li>
+                            <li><a href="about.html">ABOUT</a></li>
+                            <li><a href=contact.html"">CONTACT</a></li>
                         </ul>
                     </section>
     
@@ -114,17 +48,14 @@
                         <section>
                             <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
 
-            <section class="profile_cart d-flex header-section3">
-              <section>
-                <a href=""><i class="fa-solid fa-user"></i></a>
-              </section>
-              <section>
-                <span>$0.00</span>
-              </section>
-              <section>
-                <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
-                <div class="cart-num d-flex">
-                  <p>0</p>
+                            <div class="cart-num d-flex">
+                                <p>0</p>
+                            </div>
+                        </section>
+                    </section>
+    
+                </section>
+
                 <section class="hero-text-container">
                     <p>WELCOME TO FLAWLESS STORE</p>
                     <h1>The Best Skin Cleanser for You</h1>
@@ -767,97 +698,35 @@
                         </div>
                     </section> 
                 </div>
-              </section>
-            </section>
-          </section>
-
-          <section class="hero-text-container">
-            <h1>Get in Touch</h1>
-            <p>
-              Enim lectus mauris faucibus turpis convallis ipsum odio lorem
-              dignissim odio enim nullam venenatis erat cursus tortor tristique
-              aliquam nulla.
-            </p>
-          </section>
-        </header>
-      </section>
-      <main>
-        <!-- YOUR MAIN GOES HERE -->
-      </main>
-      <footer>
-        <section class="footer-container d-flex">
-          <div class="footer-services d-flex">
-            <section class="d-flex">
-              <div class="icon-container d-flex">
-                <span class="material-symbols-outlined"> local_shipping </span>
-              </div>
-
-              <div>
-                <h4>FREE DELIVERY</h4>
-                <p>Nullam pharetra egestas mollis</p>
-              </div>
+                
             </section>
 
-            <section class="d-flex">
-              <div class="icon-container d-flex">
-                <span class="material-symbols-outlined"> credit_card </span>
-              </div>
+            <section class="footer-icons">
+                <section>
+                    <img src="assets/images/site-logo-dark.svg" alt="">
+                </section>
 
-              <div>
-                <h4>EASY PAYMENT</h4>
-                <p>Nullam pharetra egestas mollis</p>
-              </div>
+                <section>
+                    <ul class="d-flex footer-options">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Shop</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </section>
+
+                <section class="footer-social_media d-flex">
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </section>
             </section>
 
-            <section class="d-flex">
-              <div class="icon-container d-flex">
-                <span class="material-symbols-outlined"> airport_shuttle </span>
-              </div>
-
-              <div>
-                <h4>TRACK ORDER</h4>
-                <p>Nullam pharetra egestas mollis</p>
-              </div>
+            <section class="footer-copyright">
+                <p>© 2023 Skin Cleanser Store. Powered by Skin Cleanser Store.</p>
             </section>
 
-            <section class="d-flex">
-              <div class="icon-container d-flex">
-                <span class="material-symbols-outlined"> help </span>
-              </div>
-
-              <div>
-                <h4>HAVE QUESTIONS?</h4>
-                <p>Nullam pharetra egestas mollis</p>
-              </div>
-            </section>
-          </div>
-        </section>
-
-        <section class="footer-icons">
-          <section>
-            <img src="assets/images/site-logo-dark.svg" alt="" />
-          </section>
-
-          <section>
-            <ul class="d-flex footer-options">
-              <li><a href="">Home</a></li>
-              <li><a href="">Shop</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
-            </ul>
-          </section>
-
-          <section class="footer-social_media d-flex">
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-          </section>
-        </section>
-
-        <section class="footer-copyright">
-          <p>© 2023 Skin Cleanser Store. Powered by Skin Cleanser Store.</p>
-        </section>
-      </footer>
+        </footer>
     </div>
-  </body>
+</body>
 </html>
